update: Top>画像のフェードインを無効化

--- a/src/components/pages/top.scss
+++ b/src/components/pages/top.scss
@@ -7,6 +7,10 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
+.gatsby-image-wrapper [data-main-image] {
+  transition: none !important;
+}
+
 .top-container {
   width: 95%;
   position: absolute;
