--- a/src/components/feature/Article/EmbedCard.scss
+++ b/src/components/feature/Article/EmbedCard.scss
@@ -17,6 +17,9 @@
   margin: 30px auto;
   padding: 10px;
 
+  text-decoration: none;
+  color: color.$fg;
+
   word-break: break-all;
   border-radius: 4px;
   border: 2px solid color.$fg;
@@ -25,8 +28,31 @@
     cursor: pointer;
     transform: translateY(-4px);
     transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+    color: color.$fg;
+    text-decoration: none;
+
+    .EmbedCard-text {
+      .title {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .EmbedCard-text {
+    display: flex;
+    flex-direction: column;
     .title {
+      font-size: 1.3em;
+      font-weight: bold;
+    }
+    .url {
+      color: color.$p0;
+      font-size: 0.75em;
+      margin: 8px 0;
       text-decoration: underline;
+    }
+    .description {
+      font-size: 0.85em;
     }
   }
 
@@ -42,20 +68,6 @@
     img {
       width: 100%;
       height: 100%;
-    }
-  }
-  .EmbedCard-text {
-    display: flex;
-    flex-direction: column;
-    .title {
-      font-size: 1.3em;
-      font-weight: bold;
-    }
-    .url {
-      font-size: 0.8em;
-      margin: 8px 0;
-      // color: #c4c4c4;
-      text-decoration: underline;
     }
   }
 
