--- a/src/components/feature/Article/BlogContent.scss
+++ b/src/components/feature/Article/BlogContent.scss
@@ -10,6 +10,10 @@
 @use '../../common/color.scss';
 
 .BlogContent-container {
+  // Twitter embed
+  .twitter-tweet {
+    margin: 0 auto;
+  }
   .Thumbnail img {
     width: 100%;
     max-height: 400px;
