--- a/src/components/feature/Article/BlogContent.scss
+++ b/src/components/feature/Article/BlogContent.scss
@@ -17,8 +17,16 @@
   .Thumbnail img {
     width: 100%;
     max-height: 400px;
-    margin: auto;
+    margin: 0 auto;
     object-fit: cover;
+  }
+  .BlogContent-body_img {
+    display: block;
+    margin: 0 auto;
+    width: auto;
+    height: auto;
+    max-width: 95%;
+    max-height: 30vh;
   }
   hr {
     margin-bottom: 50px;
@@ -95,12 +103,4 @@
   .BlogContent-body_img {
     max-height: 250px;
   }
-}
-
-.BlogContent-body_img {
-  display: block;
-  width: auto;
-  height: auto;
-  max-width: 90%;
-  max-height: 400px;
 }
