update: EmbedCard>スマホでfallbackテキストを中央寄せにした

--- a/src/components/feature/Article/EmbedCard.scss
+++ b/src/components/feature/Article/EmbedCard.scss
@@ -57,7 +57,8 @@
   }
 
   .EmbedCard-img_fallback {
-    display: inline-block;
+    display: block;
+    text-align: center;
     margin: auto;
   }
   .EmbedCard-img_wrapper {
