--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -6,7 +6,7 @@
  * Twitter: @Watasuke102
  * This software is released under the MIT SUSHI-WARE License.
  */
-@use './color';
+@use '../color';
 
 .Header-container {
   z-index: 1;
