--- a/src/components/common/MenuCard/MenuCard.scss
+++ b/src/components/common/MenuCard/MenuCard.scss
@@ -7,7 +7,7 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
-@use './color';
+@use '../color';
 
 .MenuCard-container {
   $translate-time: 0.2s;
