update: Article下のコンポーネントをフォルダ分け

--- a/src/components/feature/Article/EmbedCard/EmbedCard.scss
+++ b/src/components/feature/Article/EmbedCard/EmbedCard.scss
@@ -7,7 +7,7 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
-@use '../../common/color.scss';
+@use '../../../common/color.scss';
 
 .EmbedCard-container {
   display: grid;
