--- a/src/components/feature/Article/ImageViewer/ImageViewer.scss
+++ b/src/components/feature/Article/ImageViewer/ImageViewer.scss
@@ -7,7 +7,7 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
-@use '../../common/color.scss';
+@use '../../../common/color.scss';
 
 .ImageViewer-img_wrapper {
   width: 100%;
