update: フォントの変更

--- a/src/components/common/main.scss
+++ b/src/components/common/main.scss
@@ -11,7 +11,7 @@
 // reseter.css
 @import url('https://cdn.jsdelivr.net/gh/krishdevdb/reseter.css@1.20/css/reseter.min.css');
 // font
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
 // icon
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css');
 
@@ -20,7 +20,7 @@
 }
 
 body {
-  font-family: 'M PLUS 1p', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   background-color: color.$bg;
   color: color.$fg;
   padding: 25px 20px;
