--- a/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
+++ b/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
@@ -49,7 +49,7 @@
     100% { transform: translateY(-50%) translateX(-50%) rotate(-1turn); }
   }
 
-  $inner_radius: 360px;
+  $inner_radius: 380px;
   .inner_0,
   .inner_1,
   .inner_2 {
@@ -135,7 +135,8 @@
   .first,
   .second {
     display: inline-block;
-    width: 100%;
+    width: 64px;
+    // width: 100%;
     &:hover {
       cursor: pointer;
     }
