update: Welcome>Entrypointから自然に遷移できるように、背景色を変更
後で別の色にするかも

--- a/src/components/feature/portfolio/Welcome/Welcome.scss
+++ b/src/components/feature/portfolio/Welcome/Welcome.scss
@@ -4,11 +4,14 @@
 // Email  : <watasuke102@gmail.com>
 // Twitter: @Watasuke102
 // This software is released under the MIT SUSHI-WARE License.
+@use '../../../common/color.scss';
+
 #portfolio-welcome {
   //background-color: #4b4692;
 
   a {
-    color: #eee;
+    color: color.$bg;
+    text-decoration: underline;
   }
   .greeting {
     margin-top: 16px;
@@ -29,7 +32,7 @@
       margin-left: -3px;
     }
     .name-sub {
-      color: #ccc;
+      color: rgba(color.$bg, 0.7);
     }
 
     @media screen and (max-width: 700px) {
