--- a/src/components/feature/portfolio/End/End.scss
+++ b/src/components/feature/portfolio/End/End.scss
@@ -4,11 +4,14 @@
 // Email  : <watasuke102@gmail.com>
 // Twitter: @Watasuke102
 // This software is released under the MIT SUSHI-WARE License.
+@use '../../../common/color.scss';
+
 #portfolio-end {
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  color: color.$fg;
   h2 {
     font-size: 2em !important;
   }
