--- a/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
+++ b/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
@@ -49,7 +49,7 @@
     100% { transform: translateY(-50%) translateX(-50%) rotate(-1turn); }
   }
 
-  $inner_radius: 380px;
+  $inner_radius: 410px;
   .inner_0,
   .inner_1,
   .inner_2 {
@@ -80,11 +80,26 @@
       font-weight: bold;
     }
     .option {
+      width: 300px;
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 16px;
+      gap: 8px 16px;
+      .device-notice {
+        color: rgba(color.$fg, 0.7);
+        grid-column: 1 / 3;
+        word-break: keep-all;
+        font-size: 0.6em;
+        span {
+          margin: auto;
+        }
+        .ja {
+          font-size: 0.55em;
+        }
+      }
     }
     .continue_button {
+      width: 200px;
+      margin: auto;
       position: relative;
       transition: background-color 0.3s;
       &:hover {
@@ -123,8 +138,8 @@
 .portfolio-entrypoint_toggle {
   width: 100%;
   margin: auto;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 50% 50%;
   border: 2px solid color.$fg;
 
   .selected {
@@ -135,8 +150,7 @@
   .first,
   .second {
     display: inline-block;
-    width: 64px;
-    // width: 100%;
+    width: 100%;
     &:hover {
       cursor: pointer;
     }
