--- a/src/components/pages/portfolio.scss
+++ b/src/components/pages/portfolio.scss
@@ -40,8 +40,8 @@
     display: block;
     width: 50px;
     height: 50px;
-    border-right: 2px solid #eee;
-    border-bottom: 2px solid #eee;
+    border-right: 2px solid color.$bg;
+    border-bottom: 2px solid color.$bg;
     transform: rotate(45deg);
   }
   animation: 5s moving_arrow infinite ease-in-out;
