--- a/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
+++ b/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
@@ -79,12 +79,11 @@
     }
 
     .container {
-      font-size: 1.4em;
       display: flex;
       flex-direction: column;
       gap: 12px;
       .welcome {
-        font-size: 1.5em;
+        font-size: 2.2em;
         font-weight: bold;
       }
       .option {
@@ -92,17 +91,9 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 8px 16px;
-        .device-notice {
-          color: rgba(color.$fg, 0.7);
-          grid-column: 1 / 3;
-          word-break: keep-all;
-          font-size: 0.6em;
-          span {
-            margin: auto;
-          }
-          .ja {
-            font-size: 0.55em;
-          }
+        .label {
+          text-align: left;
+          font-size: 1.2em;
         }
       }
       .continue_button {
@@ -150,8 +141,10 @@
   display: grid;
   grid-template-columns: 50% 50%;
   border: 2px solid color.$fg;
+  font-size: 1.3em;
 
   .selected {
+    font-weight: bold;
     background-color: color.$p0;
     color: color.$bg;
   }
