--- a/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
+++ b/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
@@ -91,6 +91,9 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 8px 16px;
+        .toggle_disabled {
+          font-size: 1.3em;
+        }
         .label {
           text-align: left;
           font-size: 1.2em;
