--- a/src/components/feature/portfolio/Links/LinkCard.scss
+++ b/src/components/feature/portfolio/Links/LinkCard.scss
@@ -4,55 +4,49 @@
 // Email  : <watasuke102@gmail.com>
 // Twitter: @Watasuke102
 // This software is released under the MIT SUSHI-WARE License.
+@use '../../../common/color.scss';
+
 .LinkCard_container {
-  margin: 30px auto;
-  border-radius: 10px;
-  color: #eeeeee;
-  background-color: #3d3d3dee;
+  margin: 16px auto;
+  padding: 12px 4px;
+  border-radius: 4px;
+  color: color.$fg;
+  background-color: rgba(color.$bg, 0.9);
   text-decoration: none;
 
   display: grid;
-  align-items: center;
-  width: 550px;
-  height: 130px;
-  grid-template-rows: 50px 1fr;
-  grid-template-columns: 150px 1fr;
+  width: 480px;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 120px 1fr;
 
   .icon {
+    position: relative;
     grid-row: 1 / 3;
     text-align: center;
-    img {
-      height: 64px;
+    height: 100%;
+    svg {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateY(-50%) translateX(-50%);
+      display: block;
+      height: 48px;
+      margin: auto;
     }
   }
   .head {
     grid-column: 2;
-    font-size: 1.4em;
+    font-size: 1.3em;
     font-weight: bold;
     text-decoration: underline;
   }
-  p {
+  .desc {
+    color: rgba(color.$fg, 0.8);
     grid-row: 2;
     grid-column: 2;
-    align-items: baseline;
   }
 
   &:hover {
     text-decoration: none;
-  }
-
-  @media screen and (max-width: 550px) {
-    padding: 0 15px;
-    width: 70%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    a {
-      text-align: center;
-      margin-top: 20px;
-    }
-    i {
-      display: none;
-    }
   }
 }
