--- a/src/components/feature/portfolio/Skills/Skills.scss
+++ b/src/components/feature/portfolio/Skills/Skills.scss
@@ -18,16 +18,40 @@
   }
 
   .skillcard {
-    display: flex;
-    flex-direction: column;
-    margin: 20px 15px;
-    padding: 6px 10px;
+    margin: 12px 8px;
+    padding: 8px 16px;
+    border-radius: 4px;
     color: color.$fg;
     background-color: color.$bg;
+
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto 1fr;
     .name {
       font-size: 1.5em;
       font-weight: bold;
-      //border-bottom: 1px solid #eee;
+      margin-bottom: 8px;
+    }
+    .right {
+      margin: auto;
+      .category {
+        border: 1px solid color.$fg;
+        padding: 0 8px;
+        margin: 0 12px;
+      }
+      .tier {
+        font-size: 1.2em;
+        font-weight: bold;
+        &::before {
+          font-size: 0.7em;
+          color: rgba(color.$fg, 0.8);
+          content: 'tier ';
+        }
+      }
+    }
+    .desc {
+      font-size: 0.9em;
+      color: rgba(color.$fg, 0.7);
     }
   }
 }
