update: Links>marginの代わりにgapを指定

--- a/src/components/feature/portfolio/Links/LinkCard.scss
+++ b/src/components/feature/portfolio/Links/LinkCard.scss
@@ -7,7 +7,7 @@
 @use '../../../common/color.scss';
 
 .LinkCard_container {
-  margin: 16px auto;
+  margin: 0 auto;
   padding: 12px 4px;
   border-radius: 4px;
   color: color.$fg;
