update: Skills>アイコンを表示

--- a/src/components/feature/portfolio/Skills/Skills.scss
+++ b/src/components/feature/portfolio/Skills/Skills.scss
@@ -59,5 +59,10 @@
       font-size: 0.9em;
       color: rgba(color.$fg, 0.7);
     }
+    .icon {
+      padding: 8px;
+      margin-left: auto;
+      width: 80px;
+    }
   }
 }
