--- a/src/components/feature/portfolio/Skills/Skills.scss
+++ b/src/components/feature/portfolio/Skills/Skills.scss
@@ -65,4 +65,34 @@
       width: 80px;
     }
   }
+
+  @media screen and (max-width: 550px) {
+    #skill-container .group {
+      display: flex;
+      flex-direction: column;
+    }
+    .skillcard {
+      grid-template-columns: auto auto;
+      grid-template-rows: auto auto 1fr;
+      .name {
+        grid-row: 1 / 2;
+        margin-bottom: 0;
+      }
+      .right {
+        grid-row: 2 / 3;
+        margin: 4px 0;
+        .category {
+          margin-left: 0;
+        }
+      }
+      .desc {
+        grid-column: 1 / 3;
+      }
+      .icon {
+        width: 64px;
+        grid-row: 1 / 3;
+        grid-column: 2 / 3;
+      }
+    }
+  }
 }
