--- a/src/components/feature/portfolio/Skills/Skills.scss
+++ b/src/components/feature/portfolio/Skills/Skills.scss
@@ -63,6 +63,11 @@
       padding: 8px;
       margin-left: auto;
       width: 80px;
+      height: 80px;
+      svg {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
@@ -90,6 +95,7 @@
       }
       .icon {
         width: 64px;
+        height: 64px;
         grid-row: 1 / 3;
         grid-column: 2 / 3;
       }
