update: Entrypoint>ボタンを強調
フォントサイズの増加、アンダーライン

--- a/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
+++ b/src/components/feature/portfolio/Entrypoint/Entrypoint.scss
@@ -103,6 +103,8 @@
         width: 200px;
         margin: auto;
         position: relative;
+        font-size: 1.4em;
+        text-decoration: underline;
         transition: background-color 0.3s;
         &:hover {
           cursor: pointer;
