update: Skills>カテゴリ上下にほんの少し余白を付与

--- a/src/components/feature/portfolio/Skills/Skills.scss
+++ b/src/components/feature/portfolio/Skills/Skills.scss
@@ -60,7 +60,7 @@
       margin: auto;
       .category {
         border: 1px solid color.$fg;
-        padding: 0 8px;
+        padding: 2px 8px;
         margin: 0 12px;
       }
       .tier {
