update: Links>Skillsみたいなgridにした

--- a/src/components/feature/portfolio/Links/LinkCard.scss
+++ b/src/components/feature/portfolio/Links/LinkCard.scss
@@ -15,7 +15,7 @@
   text-decoration: none;
 
   display: grid;
-  width: 480px;
+  width: 100%;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 120px 1fr;
 
