update: LinkCard>スマホでの見た目をまともに

--- a/src/components/feature/portfolio/Links/Links.scss
+++ b/src/components/feature/portfolio/Links/Links.scss
@@ -13,5 +13,10 @@
     gap: 12px;
     grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
     padding-bottom: 200px;
+
+    @media screen and (max-width: 550px) {
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
