--- a/src/components/feature/portfolio/Links/LinkCard.scss
+++ b/src/components/feature/portfolio/Links/LinkCard.scss
@@ -16,13 +16,14 @@
 
   display: grid;
   width: 100%;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-columns: 120px 1fr;
 
   .icon {
     position: relative;
     grid-row: 1 / 3;
     text-align: center;
+    width: 100%;
     height: 100%;
     svg {
       position: absolute;
@@ -41,12 +42,27 @@
     text-decoration: underline;
   }
   .desc {
-    color: rgba(color.$fg, 0.8);
     grid-row: 2;
     grid-column: 2;
+    color: rgba(color.$fg, 0.8);
   }
 
   &:hover {
     text-decoration: none;
+  }
+
+  @media screen and (max-width: 550px) {
+    grid-template-columns: 80px 1fr;
+    .icon {
+      grid-row: 1 / 2;
+      svg {
+        width: 32px;
+        height: 32px;
+      }
+    }
+    .desc {
+      grid-column: 1 / 3;
+      padding: 8px 12px;
+    }
   }
 }
