update: Skills>トグル下に余白を追加

--- a/src/components/feature/portfolio/Skills/Skills.scss
+++ b/src/components/feature/portfolio/Skills/Skills.scss
@@ -19,6 +19,7 @@
     text-align: center;
     font-size: 1.3em;
     margin: auto;
+    margin-bottom: 32px;
 
     .label {
       font-weight: bold;
