--- a/src/components/feature/portfolio/End/End.scss
+++ b/src/components/feature/portfolio/End/End.scss
@@ -14,6 +14,8 @@
   color: color.$fg;
   h2 {
     font-size: 2em !important;
+    width: 95%;
+    margin: auto;
   }
   .links {
     font-size: 1.2em;
