update: Welcome>bioアニメーション開始前にplaceholderを表示するように

--- a/src/components/feature/portfolio/Welcome/Welcome.scss
+++ b/src/components/feature/portfolio/Welcome/Welcome.scss
@@ -56,6 +56,10 @@
     padding-bottom: 128px;
   }
 
+  .bio_placeholder {
+    height: 400px;
+  }
+
   .icon-and-text {
     display: flex;
     align-items: center;
