--- a/src/components/feature/portfolio/History/EventCard.scss
+++ b/src/components/feature/portfolio/History/EventCard.scss
@@ -9,11 +9,14 @@
 .EventCard_container {
   $h_connector: 40px;
   $connector_weight: 4px;
+  position: relative;
+  z-index: 128;
   display: grid;
   grid-template-columns: 1fr $h_connector 96px $h_connector 1fr;
-  grid-template-rows: auto minmax(16px, 1fr);
+  grid-template-rows: 96px auto;
   width: 95dvw;
   margin: auto;
+  margin-bottom: 16px;
 
   .day {
     grid-column: 3 / 4;
@@ -32,14 +35,13 @@
   .card {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
+    padding: 8px 12px;
+    border-radius: 4px;
+    color: color.$fg;
+    background-color: color.$bg;
 
     .header {
-      padding: 8px 12px;
-      border-radius: 4px;
-
       text-align: right;
-      color: color.$fg;
-      background-color: color.$bg;
 
       .title {
         display: block;
@@ -52,16 +54,11 @@
         color: rgba(color.$fg, 0.7);
       }
     }
+    .body {
+      overflow-y: hidden;
+    }
   }
 
-  .v_connector {
-    grid-row: 2 / 3;
-    grid-column: 3 / 4;
-    margin: auto;
-    width: $connector_weight;
-    height: 100%;
-    background-color: color.$bg;
-  }
   .h_connector {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
@@ -70,6 +67,7 @@
     height: $connector_weight;
     background-color: color.$bg;
   }
+  // right side
   &:nth-child(even) {
     .h_connector {
       grid-column: 4 / 5;
