--- a/src/components/feature/portfolio/History/EventCard.scss
+++ b/src/components/feature/portfolio/History/EventCard.scss
@@ -66,10 +66,20 @@
         font-size: 1.2em;
         color: rgba(color.$fg, 0.7);
       }
+      .category {
+        grid-row: 1 / 2;
+        grid-column: 1 / 2;
+        display: block;
+        margin: auto;
+        padding: 2px 8px;
+        font-size: 1.1em;
+        font-weight: bold;
+        border: 1px solid color.$fg;
+      }
       .expand_icon {
         grid-row: 2 / 3;
         grid-column: 1 / 2;
-        margin: 0 auto;
+        // margin: 0 auto;
         margin-top: auto;
         width: 32px;
         height: 32px;
@@ -110,6 +120,7 @@
         .subtitle {
           grid-column: 1 / 2;
         }
+        .category,
         .expand_icon {
           grid-column: 2 / 3;
         }
