update: EventCard>画像周りの余白を増やした

--- a/src/components/feature/portfolio/History/EventCard.scss
+++ b/src/components/feature/portfolio/History/EventCard.scss
@@ -93,8 +93,13 @@
     .body {
       overflow-y: hidden;
       margin-top: 12px;
-      padding-top: 4px;
+      padding-top: 12px;
       border-top: 2px solid color.$fg;
+      img {
+        display: block;
+        width: 90%;
+        margin: auto;
+      }
     }
   }
 
