--- a/src/components/feature/portfolio/History/EventCard.scss
+++ b/src/components/feature/portfolio/History/EventCard.scss
@@ -34,18 +34,20 @@
   }
 
   .card {
+    $v_padding: 8px;
     grid-row: 1 / 3;
     grid-column: 1 / 2;
-    padding: 8px 12px;
+    padding: $v_padding 12px;
     border-radius: 4px;
     color: color.$fg;
     background-color: color.$bg;
 
     .header {
-      height: minmax($day_size, auto);
+      min-height: calc(#{$day_size} - #{$v_padding} * 2);
       text-align: right;
       display: grid;
       grid-template-columns: auto 1fr;
+      grid-template-rows: auto 1fr;
       gap: 0 8px;
       &:hover {
         cursor: pointer;
@@ -64,7 +66,7 @@
         grid-column: 2 / 3;
         display: block;
         margin-top: auto;
-        font-size: 1.2em;
+        font-size: 1em;
         color: rgba(color.$fg, 0.7);
       }
       .category {
