update: EventCard>categoryを上部に寄せた

--- a/src/components/feature/portfolio/History/EventCard.scss
+++ b/src/components/feature/portfolio/History/EventCard.scss
@@ -73,7 +73,8 @@
         grid-row: 1 / 2;
         grid-column: 1 / 2;
         display: block;
-        margin: auto;
+        margin: 0 auto;
+        margin-bottom: auto;
         padding: 2px 8px;
         font-size: 1.1em;
         font-weight: bold;
