--- a/src/components/common/ImageViewer/ImageViewer.scss
+++ b/src/components/common/ImageViewer/ImageViewer.scss
@@ -7,24 +7,15 @@
  * This software is released under the MIT SUSHI-WARE License.
  */
 
-@use '../../../common/color.scss';
+@use '../color.scss';
 
 .ImageViewer-img_wrapper {
   width: 100%;
   height: 100%;
 }
 
-.ImageViewer-inline_img {
-  display: block;
-  margin: 0 auto;
-  width: auto;
-  height: auto;
-  max-width: 95%;
-  max-height: 30vh;
-
-  &:hover {
-    cursor: zoom-in;
-  }
+.ImageViewer-inline_img:hover {
+  cursor: zoom-in;
 }
 
 .ImageViewer-dialog_img {
@@ -39,7 +30,7 @@
 }
 
 .ImageViewer-modal {
-  z-index: 999;
+  z-index: 9999;
   position: fixed;
   left: 0;
   top: 0;
