--- a/src/components/feature/portfolio/History/EventCard.scss
+++ b/src/components/feature/portfolio/History/EventCard.scss
@@ -94,17 +94,20 @@
         }
       }
     }
+      z-index: 1000;
     .body {
+      z-index: 1987;
       height: 0;
       overflow-y: hidden;
-      hr {
-        opacity: 1;
-        border: 1px solid color.$fg;
-      }
       img {
         display: block;
         width: 90%;
+        // height: 90%;
         margin: 8px auto;
+      }
+      hr {
+        opacity: 1;
+        border: 1px solid color.$fg;
       }
     }
   }
